# Samira

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml
builds/macos/: samira
src/: App.css  App.tsx  interfaces.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  database.rs  dataset.rs  main.rs  state.rs  steam.rs  vdf.rs
src/components/AchievementView/: index.css  index.tsx
src/components/Alert/: index.css  index.tsx
src/components/List/: index.css  index.tsx
src/components/Search/: index.css  index.tsx
src/components/StatisticView/: index.css  index.tsx
src/components/Status/: index.css  index.tsx
src/components/Tabs/: index.css  index.tsx
