[package]
name = "samira"
version = "0.3.0"
description = "Steam achievement manager for Linux written with Tauri and Rust"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
steamworks = { git = "https://github.com/jsnli/steamworks-rs", branch = "add-request-user-stats" }
steamworks-sys = { git = "https://github.com/jsnli/steamworks-rs", branch = "add-request-user-stats" }
regex = "1.11.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
