[package]
name = "samira"
version = "0.5.0"
description = "Steam achievement manager for Linux"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
regex = "1.11.0"
tauri-plugin-shell = "2"
steamworks = "0.12.0"
fuzzy-matcher = "0.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
